--- a/game.css
+++ b/game.css
@@ -24,7 +24,7 @@ section {
 .card {
     position: relative;
     transform-style: preserve-3d;
-    transition: all 5s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+    transition: all 2s cubic-bezier(0.175, 0.885, 0.12, 1);
     box-shadow: rgba(0,0,0,0.2) 0 5px 15px;
     
 }
@@ -33,6 +33,7 @@ section {
     width:100%;
     height:100%;
     position:absolute;
+    pointer-events: none;
 }
 
 .back {
