--- a/game.css
+++ b/game.css
@@ -20,6 +20,7 @@ section {
     grid-template-rows: repeat(4, 8rem);
     grid-gap: 2rem;
     perspective: 800px;
+    aria-live: assertive;
 }
 
 .card {
