--- a/game.css
+++ b/game.css
@@ -20,7 +20,6 @@ section {
     grid-template-rows: repeat(4, 8rem);
     grid-gap: 2rem;
     perspective: 800px;
-    aria-live: assertive;
 }
 
 .card {
@@ -28,7 +27,12 @@ section {
     transform-style: preserve-3d;
     transition: all 2s cubic-bezier(0.175, 0.885, 0.12, 1);
     box-shadow: rgba(0,0,0,0.2) 0 5px 15px;
-    
+}
+
+.card:focus {
+    outline: 3px solid rgb(0, 0, 0);
+    margin: 10px;
+    box-shadow: rgba(242, 255, 96, 0.9) 0 0 7px 15px;
 }
 
 .face, .back {
