--- a/game.css
+++ b/game.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: blueviolet;
+    background-color: rgb(84, 63, 104);
     font-family: 'Baloo 2', cursive;
 
 }
@@ -20,6 +20,10 @@ section {
     grid-template-rows: repeat(4, 8rem);
     grid-gap: 2rem;
     perspective: 800px;
+}
+
+h1 {
+    font-size: 2rem;
 }
 
 .card {
