--- a/game.css
+++ b/game.css
@@ -20,10 +20,18 @@ section {
     grid-template-rows: repeat(4, 8rem);
     grid-gap: 2rem;
     perspective: 800px;
+    padding: 2rem;
 }
 
 h1 {
-    font-size: 2rem;
+    font-size: 3rem;
+    background-color: antiquewhite;
+    margin: 0.25rem;
+    padding: 0.5rem;
+    border-radius: 0.25rem;
+    width: 38rem;
+    text-align: center;
+    
 }
 
 .card {
