--- a/game.css
+++ b/game.css
@@ -9,7 +9,7 @@ body {
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    background-color: rgb(84, 63, 104);
+    background-color:#988412;
     font-family: 'Baloo 2', cursive;
 
 }
@@ -21,6 +21,9 @@ section {
     grid-gap: 2rem;
     perspective: 800px;
     padding: 2rem;
+    margin: 2rem ;
+    background-color: #61530b;
+    box-shadow: #3f3607 0 0 15px 10px;
 }
 
 h1 {
@@ -44,7 +47,8 @@ h1 {
 .card:focus {
     outline: 3px solid rgb(0, 0, 0);
     margin: 10px;
-    box-shadow: rgba(242, 255, 96, 0.9) 0 0 15px 10px;
+    box-shadow: #ffdac6 0 0 15px 10px;
+    
 }
 
 .face, .back {
