--- a/game.css
+++ b/game.css
@@ -1,73 +1,3 @@
-* {
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 body {
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    flex-direction: column;
-    background-color:#988412;
-    font-family: 'Baloo 2', cursive;
-
+    background-color: darkslateblue;
 }
-
-section {
-    display: grid;
-    grid-template-columns: repeat(4, 8rem);
-    grid-template-rows: repeat(4, 8rem);
-    grid-gap: 2rem;
-    perspective: 800px;
-    padding: 2rem;
-    margin: 2rem ;
-    background-color: #61530b;
-    box-shadow: #3f3607 0 0 15px 10px;
-}
-
-h1 {
-    font-size: 3rem;
-    background-color: antiquewhite;
-    margin: 0.25rem;
-    padding: 0.5rem;
-    border-radius: 0.25rem;
-    width: 38rem;
-    text-align: center;
-    
-}
-
-.card {
-    position: relative;
-    transform-style: preserve-3d;
-    transition: all 2s cubic-bezier(0.175, 0.885, 0.12, 1);
-    box-shadow: rgba(0,0,0,0.2) 0 5px 15px;
-}
-
-.card:focus {
-    outline: 3px solid rgb(0, 0, 0);
-    margin: 10px;
-    box-shadow: #ffdac6 0 0 15px 10px;
-    
-}
-
-.face, .back {
-    width:100%;
-    height:100%;
-    position:absolute;
-    pointer-events: none;
-}
-
-.back {
-    background-color: white;
-    backface-visibility: hidden;
-    display:flex;
-    justify-content: center;
-    align-items: center;
-    font-size: 4rem;
-}
-
-.toggleCard {
-    transform: rotateY(180deg); 
-}
-
